UI: fix overflow behavior sidebar/content

--- a/pkgs/webview-ui/app/src/components/Sidebar/css/sidebar.css
+++ b/pkgs/webview-ui/app/src/components/Sidebar/css/sidebar.css
@@ -6,15 +6,6 @@
 @import "./sidebar-profile";
 
 /* Sidebar Structure */
-
-.sidebar {
-  min-width: theme(width.72);
-  height: 100%;
-  background-color: var(--clr-bg-inv-2);
-  border: 1px solid var(--clr-border-inv-2);
-  border-radius: theme(borderRadius.xl);
-}
-
 .sidebar__body {
   display: flex;
   flex-direction: column;
